added colors showing through divs, and implemented flex via a component for part of the nav.

--- a/react-app/src/styles.css
+++ b/react-app/src/styles.css
@@ -20,12 +20,11 @@
   border: 1px solid green;
 }
 
-.header-row {
-  border: 1px solid purple;
-}
 
-.header-row {
+.title-row {
   border: 1px solid orange;
+  display: flex;
+  flex-direction: row;
 }
 
 .reveal {
