improved responsiveness and styling

--- a/react-app/src/styles.css
+++ b/react-app/src/styles.css
@@ -5,26 +5,16 @@
 .App {
   font-family: helvetica, sans-serif;
   text-align: center;
-  border: 1px solid blue;
 }
 
 .Bridge-App {
   font-family: helvetica, sans-serif;
   text-align: center;
-  border: 1px solid pink;
 }
 
 .about-row {
   font-family: helvetica, sans-serif;
   text-align: center;
-  border: 1px solid green;
-}
-
-
-.title-row {
-  border: 1px solid orange;
-  display: flex;
-  flex-direction: row;
 }
 
 .reveal {
@@ -47,4 +37,8 @@ button {
 
 .jokes-row-concealed {
 	font-weight: lighter;
+}
+
+.rainbowbox {
+  padding: 10px;
 }
